Broke swimlanes into its own javascript file.

--- a/x.html
+++ b/x.html
@@ -11,8 +11,9 @@
     <!--[if IE]>
         <script src="javascsript/excanvas.js"></script>
     <![endif]-->
+   <script src="javascript/swimlanes.js"></script>
    <script src="x.js"></script>
-  </head>
+ </head>
   <body>
     <canvas id="canvas" width="600" height="1000">Default text</canvas>
     <script>
